Fix wrap of very long menu items

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -243,6 +243,7 @@
                 margin-right: 0.5rem;
                 margin-left: 0.5rem;
                 text-align: left;
+                white-space: nowrap;
 
                 &:hover {
                     color: $secondary;
@@ -430,6 +431,10 @@
                 text-align: end;
                 border-top: 1px solid $very-light-gray;
                 padding-left: 24px;
+
+                .nav-link {
+                    white-space: normal;
+                }
             }
         }
 
@@ -447,7 +452,7 @@
             }
 
             &-item {
-                text-wrap: auto;
+                white-space: normal;
                 text-align: left;
             }
         }
